added logger and started work on db

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+token.txt
+
 # User-specific files
 *.rsuser
 *.suo
@@ -15,7 +17,7 @@
 
 # Mono auto generated files
 mono_crash.*
-
+logs/
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
